--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -30,6 +30,27 @@
         <span class="label">Seconds</span>
       </div>
     </div>
+    <style>
+      .timer{
+        display: flex;
+        justify-content: center;
+      }
+      .field{
+        margin-top: 25px;
+        background-color: #EEE8AA;
+        padding: 50px;
+      }
+      .value{
+        display: block;
+        text-align: center;
+        font-size: 50px;
+        color: #4682B4;
+      }
+      .label{
+        font-size: 30px;
+        color: #4682B4;
+      }
+    </style>
 
     <script src="js/02-timer.js"></script>
   </body>
